# approve-bot

./: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
scripts/: gen-icon.cjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  commands.rs  config.rs  gh_login.rs  github.rs  lib.rs  main.rs  poller.rs  state.rs
src/components/: ActivityLog.tsx  AuthorsPanel.tsx  ConnectionStatus.tsx  RepositoriesPanel.tsx  SettingsPanel.tsx
src/lib/: tauri.ts  types.ts
